Terminando de instalar Tailwind

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style rel="style" href="style.css"></style>
+    <link href="./css/outpu.css" rel="stylesheet">
     <script src="script.js"></script>
     <title>Calculadora</title>
 </head>
