Creacion debase de botones y contenedores

--- a/index.html
+++ b/index.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/outpu.css" rel="stylesheet">
-    <script src="script.js"></script>
+    <link href="./css/output.css" rel="stylesheet">
+    <script src="./index.js"></script>
     <title>Calculadora</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="">
+            <div class="">
+                <i class=""></i>
+            </div>
+            <div class="">
+                <div id="display"></div>
+            </div>
+            <div class="buttons">
+                <table>
+                    <tr>
+                        <td><button class="rounded-full" id="limpiar">C</button></td>
+                        <td><button class="rounded-full" id="divicion">/</button></td>
+                        <td><button class="rounded-full" id="multiplicar">*</button></td>
+                        <td><button class="rounded-full" id="borrar"><-</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="rounded-full" id="siete">7</button></td>
+                        <td><button class="rounded-full" id="ocho">8</button></td>
+                        <td><button class="rounded-full" id="nueve">9</button></td>
+                        <td><button class="rounded-full" id="resta">-</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="rounded-full" id="cuatro">4</button></td>
+                        <td><button class="rounded-full" id="cinco">5</button></td>
+                        <td><button class="rounded-full" id="seis">6</button></td>
+                        <td><button class="rounded-full" id="suma">+</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="rounded-full" id="uno">1</button></td>
+                        <td><button class="rounded-full" id="dos">2</button></td>
+                        <td><button class="rounded-full" id="tres">3</button></td>
+                        <td rowspan="2"><button class="rounded-full" id="igual">=</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="rounded-full" id="coma">,</button></td>
+                        <td><button class="rounded-full" id="cero">0</button></td>
+                        <td><button class="rounded-full" id="dobleCero">00</button></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
