--- a/index.html
+++ b/index.html
@@ -16,36 +16,36 @@
             <div class="">
                 <div id="display"></div>
             </div>
-            <div class="buttons">
-                <table>
+            <div class="">
+                <table class="bg-[#FFE5E5] m-auto">
                     <tr>
-                        <td><button class="rounded-full" id="limpiar">C</button></td>
-                        <td><button class="rounded-full" id="divicion">/</button></td>
-                        <td><button class="rounded-full" id="multiplicar">*</button></td>
-                        <td><button class="rounded-full" id="borrar"><-</button></td>
+                        <td><button class="bg-[#756AB6] hover:bg-[#8174A0] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="limpiar">C</button></td>
+                        <td><button class="bg-[#E0AED0] hover:bg-[#EFB6C8] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="divicion">/</button></td>
+                        <td><button class="bg-[#E0AED0] hover:bg-[#EFB6C8] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="multiplicar">*</button></td>
+                        <td><button class="bg-[#756AB6] hover:bg-[#8174A0] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="borrar"><-</button></td>
                     </tr>
                     <tr>
-                        <td><button class="rounded-full" id="siete">7</button></td>
-                        <td><button class="rounded-full" id="ocho">8</button></td>
-                        <td><button class="rounded-full" id="nueve">9</button></td>
-                        <td><button class="rounded-full" id="resta">-</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="siete">7</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="ocho">8</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="nueve">9</button></td>
+                        <td><button class="bg-[#E0AED0] hover:bg-[#EFB6C8] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="resta">-</button></td>
                     </tr>
                     <tr>
-                        <td><button class="rounded-full" id="cuatro">4</button></td>
-                        <td><button class="rounded-full" id="cinco">5</button></td>
-                        <td><button class="rounded-full" id="seis">6</button></td>
-                        <td><button class="rounded-full" id="suma">+</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="cuatro">4</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="cinco">5</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="seis">6</button></td>
+                        <td><button class="bg-[#E0AED0] hover:bg-[#EFB6C8] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="suma">+</button></td>
                     </tr>
                     <tr>
-                        <td><button class="rounded-full" id="uno">1</button></td>
-                        <td><button class="rounded-full" id="dos">2</button></td>
-                        <td><button class="rounded-full" id="tres">3</button></td>
-                        <td rowspan="2"><button class="rounded-full" id="igual">=</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="uno">1</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="dos">2</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="tres">3</button></td>
+                        <td rowspan="2"><button class="bg-[#E0AED0] hover:bg-[#EFB6C8] font-semibold py-11 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="igual">=</button></td>
                     </tr>
                     <tr>
-                        <td><button class="rounded-full" id="coma">,</button></td>
-                        <td><button class="rounded-full" id="cero">0</button></td>
-                        <td><button class="rounded-full" id="dobleCero">00</button></td>
+                        <td><button class="bg-[#E0AED0] hover:bg-[#EFB6C8] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="coma">,</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="cero">0</button></td>
+                        <td><button class="bg-[#AC87C5] hover:bg-[#A888B5] font-semibold py-3 px-6 rounded-full shadow-lg transform hover:scale-105 transition duration-300 ease-in-out text-2xl" id="dobleCero">00</button></td>
                     </tr>
                 </table>
             </div>
