--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <i class=""></i>
             </div>
             <div class="">
-                <div id="display"></div>
+                <input type="text" id="display" disabled>
             </div>
             <div class="">
                 <table class="bg-[#FFE5E5] m-auto">
